syntax = "proto3";
package im.server;
import "im.base.proto";
option optimize_for = LITE_RUNTIME;


// db_proxy
message LoginValidateReq {
    // cmd id: 0x0703
    string user_name = 1;
    string password = 2;
    bytes attach_data = 3;
}

message LoginValidateRsp {
    // cmd id: 0x0704
    string user_name = 1;
    uint32 result_code = 2;
    string result_string = 3;
    im.base.UserInfo user_info = 4;
    bytes attach_data = 5;
}


message OnlineUserInfo {
    // cmd id: 0x0708
    repeated im.base.ServerUserStat user_stat_list = 1;
}

message MsgServInfo {
    // cmd id: 0x0709
    string ip = 1;
    uint32 port = 3;
    uint32 max_conn_cnt = 4;
    uint32 cur_conn_cnt = 5;
    string host_name = 6;
}

message UserCntUpdate {
    // cmd id: 0x070b
    uint32 user_action = 1;  // 1-inc, 2-dec
    uint32 user_id = 2;
}
